Bug 201700 - Fix PDFKit references in TestWebKitAPI
Summary: Fix PDFKit references in TestWebKitAPI
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Keith Rollin
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-09-11 15:33 PDT by Keith Rollin
Modified: 2019-09-12 07:13 PDT (History)
6 users (show)

See Also:


Attachments
Patch (5.98 KB, patch)
2019-09-11 15:35 PDT, Keith Rollin
no flags Details | Formatted Diff | Diff
Use HAVE_PDFKIT. (6.39 KB, patch)
2019-09-11 23:17 PDT, Keith Rollin
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Keith Rollin 2019-09-11 15:33:57 PDT
These references fail in watchOS and tvOS, so remove them on those platforms.
Comment 1 Radar WebKit Bug Importer 2019-09-11 15:34:15 PDT
<rdar://problem/55279539>
Comment 2 Keith Rollin 2019-09-11 15:35:32 PDT
Created attachment 378582 [details]
Patch
Comment 3 Alex Christensen 2019-09-11 20:47:43 PDT
Comment on attachment 378582 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=378582&action=review

> Tools/TestWebKitAPI/Tests/WebKitCocoa/PDFSnapshot.mm:28
> +#if PLATFORM(MAC) || PLATFORM(IOS)

I think this would be better given a name, like HAVE(PDFKIT)
Comment 4 Alex Christensen 2019-09-11 21:07:21 PDT
Comment on attachment 378582 [details]
Patch

Otherwise looks good.
Comment 5 Keith Rollin 2019-09-11 23:17:13 PDT
Created attachment 378624 [details]
Use HAVE_PDFKIT.
Comment 6 WebKit Commit Bot 2019-09-12 07:13:35 PDT
Comment on attachment 378624 [details]
Use HAVE_PDFKIT.

Clearing flags on attachment: 378624

Committed r249807: <https://trac.webkit.org/changeset/249807>
Comment 7 WebKit Commit Bot 2019-09-12 07:13:37 PDT
All reviewed patches have been landed.  Closing bug.