Fix PDFKit references in TestWebKitAPI https://bugs.webkit.org/show_bug.cgi?id=201700 <rdar://problem/55279539>

Reviewed by Youenn Fablet.

These references fail in watchOS and tvOS, so remove them on those
platforms.

* TestWebKitAPI/Configurations/TestWebKitAPI.xcconfig:
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/PDFSnapshot.mm:
* TestWebKitAPI/cocoa/TestPDFDocument.h:
* TestWebKitAPI/cocoa/TestPDFDocument.mm:
* TestWebKitAPI/config.h:


Canonical link: https://commits.webkit.org/215363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249807 268f45cc-cd09-0410-ab3c-d52691b4dbfc